feat: 회원가입 api 구현

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
-    "typeorm": "^0.3.10"
+    "typeorm": "^0.3.10",
+    "uuid": "^9.0.0"
   },
   "name": "wanted-pre-onboarding",
   "description": "wanted pre onboarding",
